<resources>
    <string name="app_name">Finance</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="forgot_password">Forgot Passwword ? Click</string>
    <string name="text_here">Here</string>
    <string name="haven_t_account_register">Haven’t Account ? Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>